--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-plugin-workbox",
+  "name": "@canac/parcel-plugin-workbox",
   "version": "1.0.0",
   "description": "Workbox plugin for Parcel",
   "main": "index.js",
